--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">unhasa</string>
+    <string name="app_name">Unhasa</string>
+
+    <!-- text -->
+    <string name="common_text_input_phone">휴대폰 입력</string>
+    <string name="common_text_next">다음</string>
+    <string name="common_text_continue">계속하기</string>
+
+    <!-- message -->
+    <string name="common_msg_create_account">전화번호를 이용하여 계정을 만드십시오.</string>
+    <string name="common_msg_agree_policy">\'다음\'버튼을 누를시에, 개인정보 수집 및 이용에 동의 합니다.</string>
+    <string name="common_msg_welcome">환영합니다 :)</string>
+
+    <string name="android_msg_enter_code">%s 번호로 보낸 코드를 입력해주세요.</string>
 </resources>
